--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
         </div>
       </div>
     </div>
-    <script src="scripts/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
